# tabularis-dynamodb-plugin

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile  manifest.json
.github/workflows/: ci.yml  release.yml
src/: error.rs  lib.rs  main.rs  models.rs  rpc.rs
src/dynamodb/: client.rs  mod.rs  models.rs  pool.rs
src/handlers/: crud.rs  ddl.rs  metadata.rs  mod.rs  models.rs  query.rs
src/utils/: extractor.rs
tests/: integration_test.rs
