[package]
name = "tabularis-dynamodb-plugin"
version = "0.1.0"
edition = "2021"
description = "Tabularis driver plugin for AWS DynamoDB"
license = "Apache-2.0"
publish = false

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { version = "1", features = ["behavior-version-latest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"

[dev-dependencies]
assert-json-diff = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[[bin]]
name = "tabularis-dynamodb-plugin"
path = "src/main.rs"

[[bin]]
name = "test_plugin"
path = "src/bin/test_plugin.rs"
